--- a/public/locales/tr/translation.json
+++ b/public/locales/tr/translation.json
@@ -30,8 +30,9 @@
       "Kullanıcı Odaklı Çözümler", 2000
     ],
     "career_section_background": "KARİYER",
-    "career_section_title": "Kısaca Ben",
-    "career_section_paragraph": "Şehir Planlama ve Gayrimenkul Değerleme alanındaki 9 yıllık analitik düşünme ve problem çözme tecrübemi, teknoloji tutkumla birleştirerek web geliştirme dünyasına adım attım. Detaylara verdiğim önem ve kullanıcı odaklı bakış açımla, karmaşık sorunlara basit ve zarif çözümler üretmeyi hedefliyorum."
+    "career_section_title": "Disiplinler Arası Bir Yaklaşım",
+    "career_section_p1": "Kariyerimin temelini 9 yıllık Şehir Planlama ve Gayrimenkul Değerleme tecrübesi oluşturuyor. Bu süreçte edindiğim analitik düşünme, detaylı raporlama ve veri yorumlama becerileri, bugünkü yazılım geliştirme yaklaşımımın temel taşlarıdır.",
+    "career_section_p2": "Teknoloji tutkumu profesyonel bir kariyere dönüştürürken, geçmişimden getirdiğim bu disiplini koda yansıtıyorum. Benim için yazılım geliştirme, sadece fonksiyonel araçlar yaratmak değil, aynı zamanda kullanıcı odaklı, temiz ve sürdürülebilir çözümler üretmektir. Detaylara olan bağlılığım, bu yeni alandaki en güçlü rehberim."
   },
   "about": {
     "background_text": "HAKKIMDA",
