--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -30,8 +30,9 @@
       "Benutzerorientierte Lösungen", 2000
     ],
     "career_section_background": "KARRIERE",
-    "career_section_title": "Kurz über mich",
-    "career_section_paragraph": "Ich habe meine 9-jährige Erfahrung im analytischen Denken und Problemlösen aus den Bereichen Stadtplanung und Immobilienbewertung mit meiner Leidenschaft für Technologie kombiniert und den Schritt in die Welt der Webentwicklung gewagt. Mit meiner Liebe zum Detail und meiner benutzerorientierten Perspektive strebe ich danach, einfache und elegante Lösungen für komplexe Probleme zu finden."
+    "career_section_title": "Ein Interdisziplinärer Ansatz",
+    "career_section_p1": "Meine Karriere basiert auf einem 9-jährigen Fundament in der Stadtplanung und Immobilienbewertung. Die Fähigkeiten, die ich in dieser Zeit im analytischen Denken, detaillierten Berichtswesen und der Dateninterpretation erworben habe, sind die Eckpfeiler meines heutigen Ansatzes in der Softwareentwicklung.",
+    "career_section_p2": "Während ich meine Leidenschaft für Technologie in eine professionelle Karriere umwandle, übertrage ich diese Disziplin aus meiner Vergangenheit in meinen Code. Für mich bedeutet Softwareentwicklung nicht nur, funktionale Werkzeuge zu schaffen, sondern auch benutzerorientierte, saubere und nachhaltige Lösungen zu produzieren. Meine Hingabe zum Detail ist mein stärkster Leitfaden in diesem neuen Bereich."
   },
   "about": {
     "background_text": "ÜBER MICH",
