--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -30,8 +30,9 @@
       "Soluciones Centradas en el Usuario", 2000
     ],
     "career_section_background": "CARRERA",
-    "career_section_title": "Brevemente sobre mí",
-    "career_section_paragraph": "He combinado mis 9 años de experiencia en pensamiento analítico y resolución de problemas en los campos de la planificación urbana y la valoración inmobiliaria con mi pasión por la tecnología para entrar en el mundo del desarrollo web. Con mi atención al detalle y mi perspectiva centrada en el usuario, mi objetivo es producir soluciones simples y elegantes para problemas complejos."
+    "career_section_title": "Un Enfoque Interdisciplinario",
+    "career_section_p1": "Mi carrera se basa en una base de 9 años en Planificación Urbana y Valoración Inmobiliaria. Las habilidades que adquirí en pensamiento analítico, informes detallados e interpretación de datos durante este tiempo son las piedras angulares de mi enfoque actual en el desarrollo de software.",
+    "career_section_p2": "Al transformar mi pasión por la tecnología en una carrera profesional, traslado esta disciplina de mi pasado a mi código. Para mí, el desarrollo de software no se trata solo de crear herramientas funcionales; se trata de producir soluciones centradas en el usuario, limpias y sostenibles. Mi compromiso con el detalle es mi guía más fuerte en este nuevo campo."
   },
   "about": {
     "background_text": "SOBRE MÍ",
