--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -37,6 +37,16 @@
   "about": {
     "background_text": "SOBRE MÍ",
     "title": "Mi Historia",
+    "timeline_1_title": "Universidad de Gazi",
+    "timeline_1_subtitle": "Planificación Urbana y Regional",
+    "timeline_2_title": "Valoración Inmobiliaria",
+    "timeline_2_subtitle": "9 años de experiencia",
+    "timeline_3_title": "Neos Software Academy",
+    "timeline_3_subtitle": "Formación Full-Stack",
+    "timeline_4_title": "Proyecto Rent a Car",
+    "timeline_4_subtitle": "Prácticas",
+    "timeline_5_title": "SedBim Bilişim",
+    "timeline_5_subtitle": "Front-end Developer",
     "p1": "Soy Ahmet Demiroğlu. Un Planificador Urbano graduado del Departamento de Planificación Urbana y Regional de la Facultad de Arquitectura de la Universidad de Gazi, y un Tasador de Bienes Raíces con nueve años de experiencia en campo y control. Durante este tiempo, no solo desarrollé mis habilidades de planificación y análisis, sino que también gané experiencia en la atención al detalle y la elaboración de informes. Llevé mi experiencia profesional un paso más allá al obtener la licencia de Tasador Responsable.",
     "p2": "Desde mi infancia, he tenido un gran interés en las computadoras y la tecnología. Durante mis años universitarios, tuve la oportunidad de mejorar mis habilidades en los programas de dibujo y diseño que utilizaba activamente para mi campo. Sin embargo, mi pasión por el software siempre estuvo presente y me llevó a un cambio de carrera significativo. Decidí dejar el sector inmobiliario, donde había acumulado una considerable experiencia, para desarrollarme en el campo del desarrollo web full-stack.",
     "p3": "Con este objetivo en mente, completé con éxito la Formación de Especialista en Software en la Academia de Software Neos. Esta formación abarcó lenguajes de programación como HTML, CSS, JavaScript y C#, así como bibliotecas y frameworks populares como Bootstrap, React.js y .NET. Gracias a un intenso programa de prácticas de 7 semanas que completé en julio de 2023, pude consolidar mis conocimientos teóricos con aplicaciones prácticas y llevar a cabo con éxito un proyecto de sitio web de alquiler de coches totalmente funcional. En este proyecto, participé activamente tanto en el desarrollo del front-end como del back-end, ganando experiencia en todas las capas de las aplicaciones web. Durante las prácticas, también participé en el desarrollo de una biblioteca local de CSS y JS de código abierto en Neos Software.",
