--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -37,6 +37,16 @@
   "about": {
     "background_text": "ABOUT ME",
     "title": "My Story",
+    "timeline_1_title": "Gazi University",
+    "timeline_1_subtitle": "City and Regional Planning",
+    "timeline_2_title": "Real Estate Appraisal",
+    "timeline_2_subtitle": "9 years of experience",
+    "timeline_3_title": "Neos Software Academy",
+    "timeline_3_subtitle": "Full-Stack Training",
+    "timeline_4_title": "Rent a Car Project",
+    "timeline_4_subtitle": "Internship",
+    "timeline_5_title": "SedBim Bilişim",
+    "timeline_5_subtitle": "Front-end Developer",
     "p1": "I am Ahmet Demiroğlu. I am an Urban Planner, a graduate of Gazi University, Faculty of Architecture, Department of City and Regional Planning, and a Real Estate Appraiser with nine years of field and inspection experience. During this time, I improved my planning and analysis skills and gained experience in paying attention to detail and reporting. I took my professional experience one step further by obtaining the Certified Appraiser license.",
     "p2": "I have had a great interest in computers and technology since my childhood. During my university years, I had the opportunity to improve myself in the drawing and design programs that I actively used for my department. However, my passion for software was always inside me, and this passion led me to a significant change in my career. I decided to leave the real estate sector, where I had considerable experience, and improve myself in the field of full-stack web development.",
     "p3": "In line with this goal, I successfully completed the Software Specialization Training at Neos Software Academy. This training covered programming languages such as HTML, CSS, JavaScript, and C#, as well as popular libraries and frameworks like Bootstrap, React.js, and .NET. Thanks to the 7-week intensive internship program I completed in July 2023, I reinforced my theoretical knowledge with practical applications and successfully launched a fully functional rent a car website project from start to finish. In this project, I took an active role in both front-end and back-end development, gaining experience in all layers of web applications. During my internship, I also took part in the process of preparing a domestic and open-source CSS and JS library within Neos Software.",
