--- a/public/locales/tr/translation.json
+++ b/public/locales/tr/translation.json
@@ -43,10 +43,11 @@
     "timeline_2_subtitle": "9 yıllık tecrübe",
     "timeline_3_title": "Neos Yazılım Akademi",
     "timeline_3_subtitle": "Full-Stack Eğitim",
-    "timeline_4_title": "Rent a Car Projesi",
-    "timeline_4_subtitle": "Staj",
-    "timeline_5_title": "SedBim Bilişim",
-    "timeline_5_subtitle": "Front-end Developer",
+    "timeline_4_title": "SedBim Bilişim",
+    "timeline_4_subtitle": "Front-end Developer",
+    "timeline_5_title": "GGHub",
+    "timeline_5_subtitle": "Oyuncu Sosyal Platformu",
+
     "p1": "Ben Ahmet Demiroğlu. Gazi Üniversitesi Mimarlık Fakültesi, Şehir ve Bölge Planlama Bölümü'nden mezun bir Şehir Plancısı ve dokuz yıllık saha ile kontrol tecrübesine sahip bir Gayrimenkul Değerleme Uzmanıyım. Bu süreçte, planlama ve analiz becerilerimi geliştirmenin yanı sıra, detaylara özen gösterme ve raporlama konusunda tecrübe kazandım. Sorumlu Değerleme Uzmanı yetki belgesini de alarak mesleki tecrübemi bir adım öteye taşıdım.",
     "p2": "Çocukluğumdan beri bilgisayarlara ve teknolojiye büyük bir ilgi duydum. Üniversite yıllarımda, bölümüm gereği aktif olarak kullandığım çizim ve tasarım programlarında kendimi geliştirme fırsatı buldum. Ancak, içimdeki yazılım geliştirme isteği zamanla beni kariyerimde önemli bir değişikliğe yönlendirdi. Hatırı sayılır bir tecrübeye sahip olduğum gayrimenkul sektöründen ayrılarak, full-stack web geliştirme alanında kendimi geliştirmeye karar verdim.",
     "p3": "Bu hedef doğrultusunda, Neos Yazılım Akademi'nin Yazılım Uzmanlığı Eğitimi'ni başarıyla tamamladım. Bu eğitim, HTML, CSS, JavaScript ve C# gibi programlama dillerinin yanı sıra, Bootstrap, React.js ve .NET gibi popüler kütüphane ve framework'leri de kapsıyordu. Temmuz 2023'te tamamladığım 7 haftalık yoğun staj programı sayesinde, teorik bilgilerimi pratik uygulamalarla pekiştirdim ve baştan sona çalışır durumda olan bir araç kiralama (rent a car) web sitesi projesini başarıyla hayata geçirdim. Bu projede, hem front-end hem de back-end geliştirmelerinde aktif rol alarak, web uygulamalarının tüm katmanlarında deneyim kazandım. Staj süresince ayrıca Neos Yazılım bünyesinde yerli ve açık kaynak bir CSS ve JS kütüphanesinin hazırlanması sürecinde yer aldım.",
