--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -43,10 +43,10 @@
     "timeline_2_subtitle": "9 Jahre Erfahrung",
     "timeline_3_title": "Neos Software Academy",
     "timeline_3_subtitle": "Full-Stack-Ausbildung",
-    "timeline_4_title": "Rent a Car Projekt",
-    "timeline_4_subtitle": "Praktikum",
-    "timeline_5_title": "SedBim Bilişim",
-    "timeline_5_subtitle": "Front-end-Entwickler",
+    "timeline_4_title": "SedBim Bilişim",
+    "timeline_4_subtitle": "Front-end-Entwickler",
+    "timeline_5_title": "GGHub",
+    "timeline_5_subtitle": "Gaming Social Platform",
     "p1": "Ich bin Ahmet Demiroğlu. Als Stadtplaner, Absolvent der Fakultät für Architektur, Abteilung für Stadt- und Regionalplanung der Gazi-Universität, und als Immobilienbewerter mit neun Jahren Feld- und Kontrollerfahrung. In dieser Zeit habe ich nicht nur meine Planungs- und Analysefähigkeiten entwickelt, sondern auch Erfahrung in der Detailgenauigkeit und Berichterstattung gesammelt. Mit dem Erwerb der Lizenz als Verantwortlicher Bewerter habe ich meine berufliche Erfahrung einen Schritt weiter gebracht.",
     "p2": "Seit meiner Kindheit habe ich ein großes Interesse und eine Neugier für Computer und Technologie. Während meines Studiums hatte ich die Möglichkeit, mich in den Zeichen- und Designprogrammen weiterzuentwickeln, die ich für mein Fachgebiet aktiv nutzte. Doch mein starkes Interesse an der Softwareentwicklung führte mich im Laufe der Zeit zu einer bedeutenden beruflichen Veränderung. Ich beschloss, den Immobiliensektor, in dem ich umfangreiche Erfahrung gesammelt hatte, zu verlassen und mich im Bereich der Full-Stack-Webentwicklung weiterzuentwickeln.",
     "p3": "In diesem Sinne habe ich die Ausbildung zum Software-Spezialisten an der Neos Software Academy erfolgreich abgeschlossen. Diese Ausbildung umfasste Programmiersprachen wie HTML, CSS, JavaScript und C# sowie beliebte Bibliotheken und Frameworks wie Bootstrap, React.js und .NET. Dank eines intensiven 7-wöchigen Praktikumsprogramms, das ich im Juli 2023 abschloss, konnte ich mein theoretisches Wissen durch praktische Anwendungen festigen und ein voll funktionsfähiges Website-Projekt für eine Autovermietung erfolgreich umsetzen. In diesem Projekt war ich sowohl an der Front-End- als auch an der Back-End-Entwicklung aktiv beteiligt und sammelte Erfahrungen in allen Schichten von Webanwendungen. Während des Praktikums war ich auch an der Entwicklung einer lokalen Open-Source-CSS- und JS-Bibliothek bei Neos Software beteiligt.",
