--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -43,10 +43,10 @@
     "timeline_2_subtitle": "9 años de experiencia",
     "timeline_3_title": "Neos Software Academy",
     "timeline_3_subtitle": "Formación Full-Stack",
-    "timeline_4_title": "Proyecto Rent a Car",
-    "timeline_4_subtitle": "Prácticas",
-    "timeline_5_title": "SedBim Bilişim",
-    "timeline_5_subtitle": "Front-end Developer",
+    "timeline_4_title": "SedBim Bilişim",
+    "timeline_4_subtitle": "Front-end Developer",
+    "timeline_5_title": "GGHub",
+    "timeline_5_subtitle": "Plataforma Social de Jugadores",
     "p1": "Soy Ahmet Demiroğlu. Un Planificador Urbano graduado del Departamento de Planificación Urbana y Regional de la Facultad de Arquitectura de la Universidad de Gazi, y un Tasador de Bienes Raíces con nueve años de experiencia en campo y control. Durante este tiempo, no solo desarrollé mis habilidades de planificación y análisis, sino que también gané experiencia en la atención al detalle y la elaboración de informes. Llevé mi experiencia profesional un paso más allá al obtener la licencia de Tasador Responsable.",
     "p2": "Desde mi infancia, he sentido un gran interés y curiosidad por los ordenadores y la tecnología. Durante mis años universitarios, tuve la oportunidad de mejorar mis habilidades en los programas de dibujo y diseño que utilizaba activamente en mi especialidad. Sin embargo, mi fuerte interés por el desarrollo de software me llevó con el tiempo a realizar un cambio significativo en mi carrera. Decidí dejar el sector inmobiliario, donde había adquirido una experiencia considerable, y enfocarme en desarrollarme en el campo del desarrollo web full-stack.",
     "p3": "Con este objetivo en mente, completé con éxito la Formación de Especialista en Software en la Academia de Software Neos. Esta formación abarcó lenguajes de programación como HTML, CSS, JavaScript y C#, así como bibliotecas y frameworks populares como Bootstrap, React.js y .NET. Gracias a un intenso programa de prácticas de 7 semanas que completé en julio de 2023, pude consolidar mis conocimientos teóricos con aplicaciones prácticas y llevar a cabo con éxito un proyecto de sitio web de alquiler de coches totalmente funcional. En este proyecto, participé activamente tanto en el desarrollo del front-end como del back-end, ganando experiencia en todas las capas de las aplicaciones web. Durante las prácticas, también participé en el desarrollo de una biblioteca local de CSS y JS de código abierto en Neos Software.",
